# bootcamp-task

./: .gitignore  README.md  pyproject.toml  req.txt  task_01_hash_str.py  task_02_converter.py  task_optional_lib.py
src/: test_uafilm.py  uafilm.py
