[tool.poetry]
name = "bootcamp-task"
version = "0.1.0"
description = ""
authors = ["kolin-engineer <nickolai.zt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
requests = "^2.28.1"
Pillow = "^9.2.0"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
